[gd_scene load_steps=2 format=3 uid="uid://ce34yigjjcadt"]

[ext_resource type="Script" uid="uid://ct2hqdnc4r1af" path="res://scripts/shop.gd" id="1_lx5au"]

[node name="shop" type="Panel"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.25
offset_top = -84.5
offset_right = 220.25
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx5au")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 22.0
offset_bottom = 23.0
grow_horizontal = 2
text = "SHOP"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.5
offset_top = -55.0
offset_right = 164.5
offset_bottom = -1.0
grow_vertical = 2
text = "sell wheat:
3 -> $3"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.5
offset_top = 15.0
offset_right = 164.5
offset_bottom = 69.0
grow_vertical = 2
text = "helping hand:
3$"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -55.0
offset_right = -50.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2
text = "buy a blanky:
$10"

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 15.0
offset_right = -50.0
offset_bottom = 69.0
grow_horizontal = 0
grow_vertical = 2
text = "turn back time:
50$"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
